--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div style="margin-left:50%;text-align:center;">Columns <input id="nb_cols" type="number" min="1" max="15" value="3"></div>
 				</p>
 				<div style="margin-left:30px;" class="config_label">Token to align <input id="nb_win" type="number" min="2" value="3" max="15"></div>
-				<div style="margin-left:30px;" class="config_label">Search depth <input id="nb_win" type="number" min="1" value="4" max="10"></div>
+				<div style="margin-left:30px;" class="config_label">Search depth <input id="searchDepth" type="number" min="1" value="4" max="10"></div>
 				
 			</div>
 			<div>
