--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
 				<tr>
 					<td>Computer</td>
 					<td style="text-align:center;"><input name="red" id="red_ia" type="radio"></td>
-					<td style="text-align:center;"><input name="black" id="black_ia" type="radio"></td>
+					<td style="text-align:center;"><input name="black" id="black_ia" type="radio" checked="true"></td>
 				</tr>
 				<tr>
 					<td>Random</td>
 					<td style="text-align:center;"><input name="red" id="red_random" type="radio"></td>
-					<td style="text-align:center;"><input name="black" id="black_random" type="radio" checked="true"></td>
+					<td style="text-align:center;"><input name="black" id="black_random" type="radio"></td>
 				</tr>
 			</table>
 			</div>
 			<div style="text-align:center;margin-top:20px;">
 				<label style="text-align:center;"><button onclick="random_configuration();">Random</button></label>
-				<label style="text-align:center;"><button onclick="get_configuration();" >Begin</button></label>
+				<label style="text-align:center;"><button onclick="get_configuration();">Begin</button></label>
 			</div>
 		</div>
 		<a href="#volet" class="ouvrir"><img src="images/tool.png" style="margin-right:12px;"><span style="vertical-align:17%;">Configuration</span></a>
