--- a/index.html
+++ b/index.html
@@ -6,89 +6,61 @@
 	</head>
 	<link rel="stylesheet" type="text/css" href="css/gomoku.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<body style="text-align:left;" onload="get_configuration(true);">
-		<div class="container">
-			<div class="row">
-			<div id="princ" class="col-xs-12">
-				<div class="row" style="margin-top:10px">
-					<div class="col-xs-6">
-						<img src="images/gomoku.png" width="150px"/>
-					</div>
-					<div class="col-xs-6 text-right">
-						<button id="btnOpen"  onclick="openThat()"  class="button redbutton"><img src="images/configuration.png"/></button>
-					</div>
-				</div>
-
-				<div class="row text-center" style="margin-top:20px;">
-						<div style="margin-bottom:20px;"><img id="img_turn" src="images/delete.png" width="2%"><span id="player_round" class="turn">It is red turn ! </span><button id="continue" onclick="continueGame();" class="button contButton">Continue</button></div>
-						<div id="game">
-						<table id="table_game">
-							<tr><td></td><td></td><td></td></tr>
-							<tr><td></td><td></td><td></td></tr>
-							<tr><td></td><td></td><td></td></tr>
-						</table>
+	<body style="text-align:left;" style="height:100%">
+		<div class="container" style="height:100%">
+			<div class="row" style="font-family:ambrosia;font-size:30px;margin:20px;">
+				<img width="20px;" src="images/delete.png" style="margin-right:3px;"><img width="20px;" src="images/round.png" style="margin-right:3px;"><img width="23px;" src="images/plain.png" style="margin-right:3px;">
+				<span style="color:black;">L</span><span style="color:black;">A</span><span style="color:black;">G</span>
+			</div>
+			<div class="row" style="height:100%">
+				<div id="princ" class="col-xs-12" style="position:absolute;top:30%">
+					<div class="row text-center" style="margin-top:20px;">
+						<div id="menu" class="menu">
+							<div class="col-sm-3"></div>
+							<div class="redMenu col-sm-2">
+								<a href="game.html" onclick="saveData(1);">
+									<table class="smallMenu">
+										<tr><td class="red2"></td><td></td><td></td></tr>
+										<tr><td></td><td class="red2"></td><td></td></tr>
+										<tr><td></td><td></td><td class="red2"></td></tr>
+									</table>
+									<span> Tic Tac Toe</span>
+								</a>
+							</div>
+							<div class="blueMenu col-sm-2">
+								<a href="game.html" onclick="saveData(3);">
+									<table class="verySmallMenu">
+										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+										<tr></td><td></td><td></td><td class="blue"></td><td class="blue"></td><td class="blue"></td><td class="blue"></td><td class="blue"></tr>
+										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+									</table>
+									<span>Gomoku</span>
+								</a>
+							</div>
+							<div class="greenMenu col-sm-2">
+								<a href="game.html" onclick="saveData(2);">
+									<table class="mediumSmallMenu">
+										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
+										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
+										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
+										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
+									</table>
+									<span>Your Own Grid</span>
+								</a>
+							</div>
+							<div class="col-sm-3"></div>
 						</div>
-						<div style="margin-top:30px;"><span class="turn"><img src="images/delete.png" width="2%"> Player <span class="number" id="red_points">8</span> - <span id="blue_points" class="number">3</span> Player <img src="images/geometry.png" width="2%"></span></div>
+					</div>
 				</div>
-			</div>
-			<div id="config" class="col-md-3 col-xs-6 text-right">
-				<div style="margin-top:10px">
-					<a id="btnClose" onclick="closeThat()" class="button whitebutton" aria-hidden="true"><img src="images/configuration21.png"/></a>
-					<div class="col-xs-12 text-center" style="margin-top:0px;font-family:track">Settings</div>
-					<div class="col-xs-12 text-left" style="margin-top:50px;">
-						<span style="margin-right:10px;">Number of rows</span> 
-						<img onclick="dec('nb_rows', 1);" class="add_minus" src="images/minus.png" style="margin-right:10px"/>
-						<span id="nb_rows" class="nb">3</span> 
-						<img onclick="inc('nb_rows',15);" class="add_minus" src="images/add.png" style="margin-left:10px">
-					</div>
-					<div class="col-xs-12 text-left" style="margin-top:30px;margin-right:10px;">
-						<span style="margin-right:10px;">Number of columns</span> 
-						<img onclick="dec('nb_cols',1);"  class="add_minus" src="images/minus.png" style="margin-right:10px"/>
-						<span id="nb_cols" class="nb">3</span> 
-						<img onclick="inc('nb_cols',15);" class="add_minus" src="images/add.png" style="margin-left:10px">
-					</div>
-					<div class="col-xs-12 text-left" style="margin-top:30px;margin-right:10px;">
-						<span style="margin-right:10px;">Token to align</span> 
-						<img onclick="dec('nb_win',1);" class="add_minus" src="images/minus.png" style="margin-right:10px"/>
-						<span id="nb_win" class="nb">3</span> 
-						<img onclick="inc('nb_win',15);" class="add_minus" src="images/add.png" style="margin-left:10px">
-					</div>
-					<div class="col-xs-12 text-left" style="margin-top:30px;margin-right:10px;">
-						<span style="margin-right:10px">Play with </span>
-						<input type="radio" id="human" name="player" onclick="hideComp();"/>
-  						<label for="human"><span></span>Human</label>
-						<input type="radio" id="computer" name="player" checked="true" onclick="showComp();" />
- 						<label for="computer"><span></span>Computer</label>
-					</div>
-					<div id="color" class="col-xs-12 text-left" style="margin-top:30px;margin-right:10px;">
-						<span style="margin-right:10px">Your color </span>
-						<input type="radio" id="red" name="color" checked="true"/>
-  						<label for="red"><span></span>Red</label>
-						<input type="radio" id="blue" name="color"/>
- 						<label for="blue"><span></span>Blue</label>
-					</div>
-					<div id="difficulty" class="col-xs-12 text-left" style="margin-top:30px;margin-right:10px;">
-						<span style="margin-right:10px">Difficulty</span>
-						<input type="radio" id="random" name="level" />
-  						<label for="random"><span></span>Easy</label>
-						<input type="radio" id="medium" name="level" checked="true"/>
- 						<label for="medium"><span></span>Medium</label>
- 						<input type="radio" id="hard" name="level"/>
- 						<label for="hard"><span></span>Hard</label>
-					</div>
-					<div class="col-xs-12 text-center" style="margin-top:50px;">
-						<div class="col-xs-6"><button onclick="random_configuration();" style="width:100%;color:#ed5564;font-family:track;padding:5px;">Random</button></div>
-						<div class="col-xs-6"><button onclick="get_configuration(true);" style="width:100%;color:#ed5564;font-family:track;padding:5px;">Restart</button></div>
-					</div>
-
-
-				</div>
-			</div>
 			</div>
 			<footer id="foot">Copyright © 2016 Amandine Fouillet & Laura Guillemot</footer>
 		</div>
 		<script src="js/graphique.js"></script>
-		<script src='js/gomoku.js'></script>
+		<script src='js/game.js'></script>
 		<script src='js/ia.js'></script>
 		<script src="js/jquery-2.2.0.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
