--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
 	</head>
 	<link rel="stylesheet" type="text/css" href="css/gomoku.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<body style="text-align:left;" onload="initialize();">
+	<body style="text-align:left;" onload="init_graph();init_game();">
 		<div class="container">
 			<div class="row">
 			<div id="princ" class="col-xs-12">
@@ -92,7 +92,6 @@
 		</div>
 		<script src="js/graphique.js"></script>
 		<script src='js/game.js'></script>
-		<script src='js/ia.js'></script>
 		<script src="js/jquery-2.2.0.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 	</body>
