--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
 	<body style="text-align:left;" style="height:100%">
 		<div class="container" style="height:100%">
 			<div class="row" style="font-family:ambrosia;font-size:30px;margin:20px;">
-				<img width="20px;" src="images/delete.png" style="margin-right:3px;"><img width="20px;" src="images/round.png" style="margin-right:3px;"><img width="23px;" src="images/plain.png" style="margin-right:3px;">
+				<!--<img width="20px;" src="images/delete.png" style="margin-right:3px;"><img width="20px;" src="images/round.png" style="margin-right:3px;"><img width="23px;" src="images/plain.png" style="margin-right:3px;">-->
 				<span style="color:black;">L</span><span style="color:black;">A</span><span style="color:black;">G</span>
 			</div>
 			<div class="row" style="height:100%">
-				<div id="princ" class="col-xs-12" style="position:absolute;top:25%">
+				<div id="princ" class="col-xs-12" style="position:absolute;top:10%">
 					<div class="row text-center" style="margin-top:0px;">
 						<div id="menu" class="menu">
-							<div class="col-sm-2"></div>
-							<div class="redMenu col-sm-4">
+							<div class="col-sm-6 text-right" style="margin-right:-9px;">
 								<a href="game.html" onclick="saveData(1);">
-									<table class="smallMenu">
+									<img src="images/morpion.png" width="60%">
+									<!--<table class="smallMenu">
 										<tr><td class="red2"></td><td></td><td></td></tr>
 										<tr><td></td><td class="red2"></td><td></td></tr>
 										<tr><td></td><td></td><td class="red2"></td></tr>
-									</table>
-									<span> Tic Tac Toe</span>
+									</table>-->
+									<!--<p> Tic Tac Toe</p>-->
 								</a>
 							</div>
-							<div class="blueMenu col-sm-4">
+							<div class="col-sm-6 text-left" style="margin-left:-9px;">
 								<a href="game.html" onclick="saveData(3);">
-									<table class="verySmallMenu">
+									<img src="images/gomoku_log.png" width="60%">
+									<!--<table class="verySmallMenu">
 										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 										<tr></td><td></td><td></td><td class="blue"></td><td class="blue"></td><td class="blue"></td><td class="blue"></td><td class="blue"></tr>
@@ -38,12 +39,13 @@
 										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 									</table>
-									<span>Gomoku</span>
+									<span>Gomoku</span>-->
 								</a>
 							</div>
-							<div class="col-sm-2"></div>
-							<div class="yellowMenu col-sm-4">
+							<div class="col-sm-6 text-right" style="margin-right:-9px;">
 								<a href="game.html" onclick="saveData(2);">
+									<img src="images/connect4_log.png" width="60%">
+									<!--
 									<table class="verySmallMenu">
 										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 										<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
@@ -52,18 +54,20 @@
 										<tr><td></td><td class="yellow"></td><td></td><td></td><td></td><td></td><td></td></tr>
 										<tr><td class="yellow"></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
 									</table>
-									<span>Connect 4</span>
+									<span>Connect 4</span>-->
 								</a>
 							</div>
-							<div class="greenMenu col-sm-4">
+							<div class="col-sm-6 text-left" style="margin-left:-9px;">
 								<a href="game.html" onclick="saveData(4);">
-									<table class="mediumSmallMenu">
+									<img src="images/yourown_log.png" width="60%">
+
+									<!--<table class="mediumSmallMenu">
 										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
 										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
 										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
 										<tr><td></td><td class="green"></td><td></td><td></td><td></td></tr>
 									</table>
-									<span>Your Own Grid</span>
+									<span>Your Own Grid</span>-->
 								</a>
 							</div>
 							<div class="col-sm-2"></div>
